Save results for experiment 1 GA 2018 Income

--- a/notebooks/mult_repair_levels_income_GA/Folk_GA_2018_Batch2-Copy1.ipynb
+++ b/notebooks/mult_repair_levels_income_GA/Folk_GA_2018_Batch2-Copy1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "6ea6958b",
+   "id": "a5e50ce2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "96bd2232",
+   "id": "defab948",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "135fb435",
+   "id": "5bebb568",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4b20d31c",
+   "id": "a6222fc2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "bdcdb2d8",
+   "id": "905da9e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b9a08821",
+   "id": "08cba71d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "94d54286",
+   "id": "a90a85ae",
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68a89caf",
+   "id": "b5bdee3c",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "cad3c7d4",
+   "id": "17820630",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ff9bea6",
+   "id": "747c00cb",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "29ac18b9",
+   "id": "e6c2fdf0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85ccde73",
+   "id": "5c6f0ddb",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -156,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "061ffc16",
+   "id": "4b307137",
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "fc1eda0b",
+   "id": "9f83c7bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "e7d983a0",
+   "id": "aec166c8",
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa8e8c93",
+   "id": "f42308af",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "468394f8",
+   "id": "0020ff23",
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "42097bfa",
+   "id": "2b493115",
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "21fca1cb",
+   "id": "01ac92f6",
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "987a36bf",
+   "id": "76380878",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e34e154d",
+   "id": "8b9d1f60",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "d6a21d53",
+   "id": "620e3ca8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "35a77476",
+   "id": "6878b776",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "12d2a9d8",
+   "id": "8a2e14fc",
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d3acb4c",
+   "id": "cc98ef56",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -594,7 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "73656b35",
+   "id": "a96e0d5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,7 +622,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "8fc95e41",
+   "id": "a380349e",
    "metadata": {},
    "outputs": [
     {
@@ -867,7 +867,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c25487b",
+   "id": "a3b7b101",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -876,7 +876,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "41f004e2",
+   "id": "fd5d2681",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -902,8 +902,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a48dbc6b",
+   "execution_count": 17,
+   "id": "61cc9d49",
    "metadata": {},
    "outputs": [
     {
@@ -1126,6 +1126,159 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "intervention_param:  0.8\n",
+      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/mult_repair_levels_income_GA/tuning_results_Folktables_GA_2018_Income_alpha_0.8_20230718__013550.csv\n",
+      "RandomForestClassifier:  {'bootstrap': True, 'ccp_alpha': 0.0, 'class_weight': None, 'criterion': 'gini', 'max_depth': 90, 'max_features': 'sqrt', 'max_leaf_nodes': None, 'max_samples': None, 'min_impurity_decrease': 0.0, 'min_samples_leaf': 1, 'min_samples_split': 10, 'min_weight_fraction_leaf': 0.0, 'n_estimators': 700, 'n_jobs': None, 'oob_score': False, 'random_state': 301, 'verbose': 0, 'warm_start': False}\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e5cddc4f69b7497a8b55f385f0a87801",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Multiple runs progress:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d316f134320042a6ba0047eaaefaee29",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Analyze models in one run:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9d541e6f5a2c4a8bb66f23875dd4223f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Classifiers testing by bootstrap:   0%|          | 0/200 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "intervention_param:  0.9\n",
+      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/mult_repair_levels_income_GA/tuning_results_Folktables_GA_2018_Income_alpha_0.9_20230718__001740.csv\n",
+      "RandomForestClassifier:  {'bootstrap': False, 'ccp_alpha': 0.0, 'class_weight': None, 'criterion': 'gini', 'max_depth': 70, 'max_features': 'sqrt', 'max_leaf_nodes': None, 'max_samples': None, 'min_impurity_decrease': 0.0, 'min_samples_leaf': 1, 'min_samples_split': 10, 'min_weight_fraction_leaf': 0.0, 'n_estimators': 100, 'n_jobs': None, 'oob_score': False, 'random_state': 301, 'verbose': 0, 'warm_start': False}\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "eb8a70561ce2463b92f9bfcf1e9f1281",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Multiple runs progress:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "63f344c094b4491ba5004c5a999b3088",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Analyze models in one run:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "14818ebce55443b6aeefeac17dcacccd",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Classifiers testing by bootstrap:   0%|          | 0/200 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "intervention_param:  1.0\n",
+      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/mult_repair_levels_income_GA/tuning_results_Folktables_GA_2018_Income_alpha_1.0_20230718__101724.csv\n",
+      "RandomForestClassifier:  {'bootstrap': False, 'ccp_alpha': 0.0, 'class_weight': None, 'criterion': 'gini', 'max_depth': 100, 'max_features': 'sqrt', 'max_leaf_nodes': None, 'max_samples': None, 'min_impurity_decrease': 0.0, 'min_samples_leaf': 1, 'min_samples_split': 10, 'min_weight_fraction_leaf': 0.0, 'n_estimators': 200, 'n_jobs': None, 'oob_score': False, 'random_state': 301, 'verbose': 0, 'warm_start': False}\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "82c7e94260dd4f7ba38ecb3508dceead",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Multiple runs progress:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a7c235438aaa4c0abaccc217fe214e27",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Analyze models in one run:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3ad640ce741b44b0b8a972a5a376556f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Classifiers testing by bootstrap:   0%|          | 0/200 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1147,7 +1300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef82f0b8",
+   "id": "c57e1c70",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -1156,7 +1309,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "f16612eb",
+   "id": "30de6e56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1184,7 +1337,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a38ba9fd",
+   "id": "964a1a30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1206,7 +1359,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fd50bad",
+   "id": "4c350b4c",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -1215,7 +1368,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0894a10d",
+   "id": "719f6290",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1243,7 +1396,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5886280f",
+   "id": "5976121a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1265,7 +1418,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e85360b",
+   "id": "3a21d3f2",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -1274,7 +1427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa54a29a",
+   "id": "521daec0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1302,7 +1455,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3fd3ec73",
+   "id": "120db574",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1325,7 +1478,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "494becc1",
+   "id": "0b20e1c9",
    "metadata": {},
    "outputs": [],
    "source": []
