--- a/notebooks/mult_repair_levels_income_GA/Folk_GA_2018_Batch2-Copy4.ipynb
+++ b/notebooks/mult_repair_levels_income_GA/Folk_GA_2018_Batch2-Copy4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "3bd5b38f",
+   "id": "eb6d6687",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1445386c",
+   "id": "a3934290",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "73e5a3ca",
+   "id": "9e4164bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "60cc5492",
+   "id": "d131256a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "57ab3128",
+   "id": "09b53145",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4e85d54a",
+   "id": "ee9fbd57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "97528593",
+   "id": "df3d0079",
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3063495f",
+   "id": "f6f635fd",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "7eac2ebc",
+   "id": "e2c614a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5ab5c19",
+   "id": "78579670",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "7250b4d9",
+   "id": "748772fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b809835e",
+   "id": "f4b40143",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -156,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "2c4366b0",
+   "id": "777199db",
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "64be4757",
+   "id": "f9c6d782",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "b9bcbda7",
+   "id": "566b8517",
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7e6d86a",
+   "id": "a3f86ca6",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "293dd1f4",
+   "id": "7db955a4",
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "6f4202c2",
+   "id": "87117325",
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "586847d9",
+   "id": "0ba36293",
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "828c6b11",
+   "id": "3cdfb8bf",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0904e7b3",
+   "id": "ffc35541",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "6fe6ee0d",
+   "id": "96d6b143",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "887f4dc1",
+   "id": "2bfb638e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "fcb882d0",
+   "id": "de3e9d84",
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f0abbd6",
+   "id": "221e01d1",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -594,7 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "fe3225be",
+   "id": "482851fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,7 +622,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "c8ec76f8",
+   "id": "b39348e7",
    "metadata": {},
    "outputs": [
     {
@@ -867,7 +867,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2531464b",
+   "id": "53b32f01",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -876,7 +876,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "cce78df1",
+   "id": "aeec3752",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -904,7 +904,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0084e0f4",
+   "id": "d618893d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -926,7 +926,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "830146fd",
+   "id": "33be933a",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -935,7 +935,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "8162b97d",
+   "id": "9a5f931c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -963,7 +963,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e580ba4f",
+   "id": "21ceed23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47ecbaba",
+   "id": "a44b09c9",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -994,7 +994,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df387364",
+   "id": "bbc2410b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1022,7 +1022,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a986d21",
+   "id": "ce178941",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1044,7 +1044,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b68a54c6",
+   "id": "20a111ea",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -1053,7 +1053,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "6d8e44ff",
+   "id": "98f8b20f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1079,8 +1079,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6d25896b",
+   "execution_count": 18,
+   "id": "92d9d26e",
    "metadata": {},
    "outputs": [
     {
@@ -1303,6 +1303,159 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "intervention_param:  0.8\n",
+      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/mult_repair_levels_income_GA/tuning_results_Folktables_GA_2018_Income_alpha_0.8_20230718__013550.csv\n",
+      "RandomForestClassifier:  {'bootstrap': True, 'ccp_alpha': 0.0, 'class_weight': None, 'criterion': 'gini', 'max_depth': 90, 'max_features': 'sqrt', 'max_leaf_nodes': None, 'max_samples': None, 'min_impurity_decrease': 0.0, 'min_samples_leaf': 1, 'min_samples_split': 10, 'min_weight_fraction_leaf': 0.0, 'n_estimators': 700, 'n_jobs': None, 'oob_score': False, 'random_state': 601, 'verbose': 0, 'warm_start': False}\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9840bddc73e04b23a530378fd8fa752e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Multiple runs progress:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9fe37de7c0c046f8a905e92b44bfc715",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Analyze models in one run:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a42201394a9848fc969e82aac5f5c5a9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Classifiers testing by bootstrap:   0%|          | 0/200 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "intervention_param:  0.9\n",
+      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/mult_repair_levels_income_GA/tuning_results_Folktables_GA_2018_Income_alpha_0.9_20230718__001740.csv\n",
+      "RandomForestClassifier:  {'bootstrap': False, 'ccp_alpha': 0.0, 'class_weight': None, 'criterion': 'gini', 'max_depth': 70, 'max_features': 'sqrt', 'max_leaf_nodes': None, 'max_samples': None, 'min_impurity_decrease': 0.0, 'min_samples_leaf': 1, 'min_samples_split': 10, 'min_weight_fraction_leaf': 0.0, 'n_estimators': 100, 'n_jobs': None, 'oob_score': False, 'random_state': 601, 'verbose': 0, 'warm_start': False}\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "601f0e5249b440c2998a86ca052377fd",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Multiple runs progress:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6afc4c35fe4747afadc812e246f6472d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Analyze models in one run:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "daef8a445bf64b1e830ddaaf7fd4c6cf",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Classifiers testing by bootstrap:   0%|          | 0/200 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "intervention_param:  1.0\n",
+      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/mult_repair_levels_income_GA/tuning_results_Folktables_GA_2018_Income_alpha_1.0_20230718__101724.csv\n",
+      "RandomForestClassifier:  {'bootstrap': False, 'ccp_alpha': 0.0, 'class_weight': None, 'criterion': 'gini', 'max_depth': 100, 'max_features': 'sqrt', 'max_leaf_nodes': None, 'max_samples': None, 'min_impurity_decrease': 0.0, 'min_samples_leaf': 1, 'min_samples_split': 10, 'min_weight_fraction_leaf': 0.0, 'n_estimators': 200, 'n_jobs': None, 'oob_score': False, 'random_state': 601, 'verbose': 0, 'warm_start': False}\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2698e5477bd547d68ff63f79fceda006",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Multiple runs progress:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1294759ba4b845da821ee821b9e345fe",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Analyze models in one run:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "79c1797dd0db49948bfe5ded9fd35931",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Classifiers testing by bootstrap:   0%|          | 0/200 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1325,7 +1478,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7fd5d4b0",
+   "id": "3d51bfd2",
    "metadata": {},
    "outputs": [],
    "source": []
