--- a/notebooks/mult_repair_levels_income_GA/Folk_GA_2018_Batch2-Copy3.ipynb
+++ b/notebooks/mult_repair_levels_income_GA/Folk_GA_2018_Batch2-Copy3.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "4551b234",
+   "id": "06b056ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c1997c3a",
+   "id": "380c0c6a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "cd4bcfc9",
+   "id": "0c45f1d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a6b58da2",
+   "id": "d0d2f73c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "09a6936d",
+   "id": "c5dede42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "fdd0e78e",
+   "id": "780011ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a080b85f",
+   "id": "f4078fdd",
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99ce8270",
+   "id": "abefc055",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "dc600fa7",
+   "id": "1757d3ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6e1782d",
+   "id": "05923d8f",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "70e2ba42",
+   "id": "1a1b5cd0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04d77323",
+   "id": "64e3aa62",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -156,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "0cfe9ffe",
+   "id": "4b2b92aa",
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "4a6cdd5d",
+   "id": "096db8e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "5c5414d2",
+   "id": "8de8777b",
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed435fea",
+   "id": "b0abcc0f",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "d936f003",
+   "id": "049a0d6c",
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "928764dc",
+   "id": "7a2b2faf",
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "2b7f559d",
+   "id": "74ecf22a",
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b623e7b",
+   "id": "29bbdba1",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "474820db",
+   "id": "2c0677c5",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "5edd2f75",
+   "id": "b00cd920",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "2d940f6d",
+   "id": "2dd6595a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "af50148c",
+   "id": "4f99b308",
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81175e61",
+   "id": "ee333a90",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -594,7 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "ad9e2cb4",
+   "id": "59d16125",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,7 +622,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "16ebd824",
+   "id": "f4835e10",
    "metadata": {},
    "outputs": [
     {
@@ -867,7 +867,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb31277f",
+   "id": "42ae10e9",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -876,7 +876,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "1e4b8848",
+   "id": "94a19dc5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -904,7 +904,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "66851b57",
+   "id": "539fccd9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -926,7 +926,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0745e31e",
+   "id": "76007084",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -935,7 +935,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "bf1900c8",
+   "id": "df416439",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -963,7 +963,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "be67b303",
+   "id": "29c82309",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17589e96",
+   "id": "f6e6adc2",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -994,7 +994,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "5caa18cd",
+   "id": "93e848d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1020,8 +1020,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7ff3c45c",
+   "execution_count": 18,
+   "id": "50d41186",
    "metadata": {},
    "outputs": [
     {
@@ -1244,6 +1244,159 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "intervention_param:  0.8\n",
+      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/mult_repair_levels_income_GA/tuning_results_Folktables_GA_2018_Income_alpha_0.8_20230718__013550.csv\n",
+      "RandomForestClassifier:  {'bootstrap': True, 'ccp_alpha': 0.0, 'class_weight': None, 'criterion': 'gini', 'max_depth': 90, 'max_features': 'sqrt', 'max_leaf_nodes': None, 'max_samples': None, 'min_impurity_decrease': 0.0, 'min_samples_leaf': 1, 'min_samples_split': 10, 'min_weight_fraction_leaf': 0.0, 'n_estimators': 700, 'n_jobs': None, 'oob_score': False, 'random_state': 501, 'verbose': 0, 'warm_start': False}\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "57ec55124f6e4afaa307879e140dafa9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Multiple runs progress:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "abf374f6ec35446c8e87f98792ad7f85",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Analyze models in one run:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8e5946f1598745aab84f9031ef93ab81",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Classifiers testing by bootstrap:   0%|          | 0/200 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "intervention_param:  0.9\n",
+      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/mult_repair_levels_income_GA/tuning_results_Folktables_GA_2018_Income_alpha_0.9_20230718__001740.csv\n",
+      "RandomForestClassifier:  {'bootstrap': False, 'ccp_alpha': 0.0, 'class_weight': None, 'criterion': 'gini', 'max_depth': 70, 'max_features': 'sqrt', 'max_leaf_nodes': None, 'max_samples': None, 'min_impurity_decrease': 0.0, 'min_samples_leaf': 1, 'min_samples_split': 10, 'min_weight_fraction_leaf': 0.0, 'n_estimators': 100, 'n_jobs': None, 'oob_score': False, 'random_state': 501, 'verbose': 0, 'warm_start': False}\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "505767a3ea624ad2bb18e626f584e268",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Multiple runs progress:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "877a9e9b808a43f1b75eee6f7342cc9e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Analyze models in one run:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5d971f47fb9d43da9fdad7ae15001154",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Classifiers testing by bootstrap:   0%|          | 0/200 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "intervention_param:  1.0\n",
+      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/mult_repair_levels_income_GA/tuning_results_Folktables_GA_2018_Income_alpha_1.0_20230718__101724.csv\n",
+      "RandomForestClassifier:  {'bootstrap': False, 'ccp_alpha': 0.0, 'class_weight': None, 'criterion': 'gini', 'max_depth': 100, 'max_features': 'sqrt', 'max_leaf_nodes': None, 'max_samples': None, 'min_impurity_decrease': 0.0, 'min_samples_leaf': 1, 'min_samples_split': 10, 'min_weight_fraction_leaf': 0.0, 'n_estimators': 200, 'n_jobs': None, 'oob_score': False, 'random_state': 501, 'verbose': 0, 'warm_start': False}\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "021df12c2ec04cd59e6681549f22f274",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Multiple runs progress:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4d6e58f81eea42b3879050f43e4fa218",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Analyze models in one run:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "898f8cb2d2004f5ea9544d1904657b2c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Classifiers testing by bootstrap:   0%|          | 0/200 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1265,7 +1418,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c41e4200",
+   "id": "b95a7a7e",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -1274,7 +1427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c013943",
+   "id": "6a195b18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1302,7 +1455,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a9a3869",
+   "id": "a9479e6e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1325,7 +1478,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2a48cff",
+   "id": "4e1da0d1",
    "metadata": {},
    "outputs": [],
    "source": []
